added responsive styles.

--- a/assets/scss/layouts/_layouts.scss
+++ b/assets/scss/layouts/_layouts.scss
@@ -9,6 +9,8 @@
 //  Bootstrap Style
 @import "bootstrap/bootstrap";
 
+//  Responsive Style
+@import "responsive";
 
 // Header
 @import "header/header";
