Working on home page.

--- a/assets/scss/layouts/_common.scss
+++ b/assets/scss/layouts/_common.scss
@@ -29,7 +29,7 @@ h1, h2, h3 {
   color:#363636; 
 }
 .league {
-  font-family: "league-gothic-1","league-gothic-2",sans-serif;
+  font-family: "league-gothic",sans-serif;
 }
 li {
   list-style: none;
