--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -11,8 +11,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         {{{stylesheet '/assets/css/theme.css'}}}
         {{ getFontsCollection }}
-        <script src="{{cdn '/assets/modernizr-custom.js'}}"></script>
-
+        <script src="https://use.typekit.net/lah3aoe.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
         {{{head.scripts}}}
         {{{head.rsslinks}}}
 
@@ -46,12 +47,14 @@
                 startupApp(stencilBootstrap);
             </script>
         {{else}}
+
             <script src="{{cdn '/assets/jspm_packages/system.js'}}"></script>
             <script src="{{cdn '/assets/config.js'}}"></script>
             <script src="{{cdn '/assets/js/dependency-bundle.js'}}"></script>
             <script>
                 System.import("js/app").then(function(){ startupApp(stencilBootstrap)});
             </script>
+            <script src="{{cdn 'assets/js/theme/carousel.js'}}"></script>
         {{/if}}
         {{{footer.scripts}}}
         {{{snippet 'footer'}}}
