--- a/assets/scss/layouts/_variables.scss
+++ b/assets/scss/layouts/_variables.scss
@@ -1,3 +1,12 @@
-// Colors 
 
+
+
+
+// Fonts 
+$default: 'Open Sans';
+$league: 'league-gothic'; 
+$robot: 'Roboto Slab';
+
+// Colors 
 $gold: #fec346; 
+
