--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -33,10 +33,10 @@
           <div class="social-wrapper cf">
             <h3>Follow us on:</h3>
             <ul>
-              <li><a href="//www.facebook.com/timber.threads.clothing"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="//instagram.com/timberthreads"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="//twitter.com/timber_threads"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="//www.youtube.com/user/timberthreads"><i class="fa fa-youtube"></i></a></li>
+              <li><a target="_blank" href="//www.facebook.com/timber.threads.clothing"><i class="fa fa-facebook"></i></a></li>
+              <li><a target="_blank" href="//instagram.com/timberthreads"><i class="fa fa-instagram"></i></a></li>
+              <li><a target="_blank" href="//twitter.com/timber_threads"><i class="fa fa-twitter"></i></a></li>
+              <li><a target="_blank" href="//vimeo.com/user30584886"><i class="fa fa-vimeo"></i></a></li>
             </ul>
           </div>
           <div class="payment-wrapper cf">
