--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -37,5 +37,24 @@
           </nav>
 
         </div>
-
+        <div class="sub-header">
+          <div class="social-links">
+            
+            <ul>
+              <li><span>follow us:</span></li>
+              <li><a target="_blank" href="//www.facebook.com/timber.threads.clothing"><i class="fa fa-facebook"></i></a></li>
+              <li><a target="_blank" href="//instagram.com/timberthreads"><i class="fa fa-instagram"></i></a></li>
+              <li><a target="_blank" href="//twitter.com/timber_threads"><i class="fa fa-twitter"></i></a></li>
+              <li><a target="_blank" href="//vimeo.com/user30584886"><i class="fa fa-vimeo"></i></a></li>
+            </ul>
+          </div>
+          <div class="store-links">
+            <ul>
+                <li><a href="/account.php">My Account</a></li>
+                <li class="last CartLink js-drawermenu-cart">
+                    <i class="icon icon-cart" title="View Cart">&nbsp;</i><a href="/cart.php"><span>{{lang 'cart.label' quantity=cart.quantity}}</span></a>
+                </li>
+            </ul>
+          </div>
+        </div>
       </header>
