--- a/assets/scss/layouts/buttons/_buttons.scss
+++ b/assets/scss/layouts/buttons/_buttons.scss
@@ -3,18 +3,17 @@
   border:none;
   border-top-color:none;
   border-left-color:none;
-  padding: 4px 12px;
+  padding: 1rem 2rem;
   color: white;
   display: inline-block;
-  font-size:14px;
+  font-size:1rem;
   font-weight: normal;
   text-decoration: none;
   text-shadow:none;
   cursor: pointer;
   text-transform:uppercase;
   margin-bottom:0;
-  line-height: 21px;
-  border-radius: 4px;
+  border-radius: 0.5rem;
   background-color: #ab2b2b;
   background-image: linear-gradient(to bottom, #ab2b2b, #ab2b2b);
 }
