--- a/templates/components/products/featured.html
+++ b/templates/components/products/featured.html
@@ -1,4 +1,4 @@
-<h2 class="page-heading">{{lang 'products.featured' }}</h2>
+<h2 class="page-heading league">{{lang 'products.featured' }}</h2>
 
 <ul class="productMasonry productGrid--maxCol{{ columns }}" data-product-type="featured">
     {{#each products}}
